--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,18 +18,18 @@ spring:
       default-data-source-name: ds0
       tables:
         t_user:
-          actual-data-nodes: ds$->{0..1}.t_user$->{0..1}
+          actual-data-nodes: ds$->{0}.t_user$->{0..1}
           table-strategy:
             inline:
-              algorithm-expression: t_user$->{user_id % 2}
-              sharding-column: user_id
+              algorithm-expression: t_user$->{id % 2}
+              sharding-column: id
           database‐strategy:
             inline:
-              algorithm-expression: ds$->{user_id % 2}
-              sharding-column: user_id
+              algorithm-expression: ds$->{0}
+              sharding-column: id
           key-generator:
             type: SNOWFLAKE
-            column: user_id
+            column: id
         t_order:
           # 属性必需, 属性配置参考YamlShardingRuleConfiguration
           actual-data-nodes: ds$->{0}.t_order$->{0}
